--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,22 @@
 {{>nav}}
+<div class="container">
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">New Order</h5>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Past Orders</h5>
+        </div>
+    </div>
+</div>
+
+<div class="contact">
+    <p class="contactItem">CUSTOMER SERVICE: 555-555-5555</p>
+    <p class="contactItem">E-MAIL: hamperDC@gmail.com</p>
+    <p class="contactItem">MAIN OFFICE: 666-666-6666</p>
+</div>
