added create account container and changed styling of log in container

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,12 +37,37 @@
   margin: 20px;
 }
 
-#signin {
+#signup {
   width: 50vh;
   border-style: solid;
   border-color: #8eb2df;
   border-width: 2px;
   padding: 10px;
   background-color: #f6fafb;
-  align-items: center;
+  margin: 5vh;
+}
+
+#login {
+  width: 50vh;
+  border-style: solid;
+  border-color: #8eb2df;
+  border-width: 2px;
+  padding: 10px;
+  background-color: #f6fafb;
+  margin: 5vh;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.formHeader {
+  text-align: center;
+}
+
+.or {
+  margin-top: 30vh;
+  font-weight: bold;
+  color: #8eb2df;
 }
