--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,9 @@
+<header class='loginPageHeader'>
+  <div>
+
+  </div>
+</header>
+
 <div class='formContainer'>
   <div id='login'>
     <p class='formHeader'>Login</p>
@@ -71,3 +77,9 @@
     </div>
   </div>
 </div>
+
+<footer class='loginPageFooter'>
+  <div>
+
+  </div>
+</footer>
