--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -32,7 +32,7 @@
             <ul class='dropdown-menu' aria-labelledby='navbarDropdown'>
               <li><a class='dropdown-item' href='#'>Settings</a></li>
               <li><hr class='dropdown-divider' /></li>
-              <li><a class='dropdown-item' href='#'>Sign Out</a></li>
+              <li><a class='dropdown-item' href='#' id='signOut'>Sign Out</a></li>
             </ul>
           </li>
           <li class='nav-item dropdown'>
