began work on new order page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">New Order</h5>
+            <h5 id="newOrder" class="card-title">New Order</h5>
         </div>
     </div>
 
