--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,17 +3,26 @@
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 id="newOrder" class="card-title">New Order</h5>
+            <h5 id="newOrder" class="card-title">New Item</h5>
         </div>
     </div>
 
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Past Orders</h5>
+            <h5 class="card-title">My Hamper</h5>
         </div>
     </div>
 </div>
+
+<div class="plate">
+  <p class="script"><span>Dry</span></p>
+  <p class="shadow text1">CLEANING</p>
+  <p class="shadow text2">MADE</p>
+  <p class="shadow text3">EASY</p>
+  <p class="script"><span>with Hamper</span></p>
+</div>
+
 
 <div class="contact">
     <p class="contactItem">CUSTOMER SERVICE: 555-555-5555</p>
