--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -1,7 +1,16 @@
 {{>nav}}
-<h1>New Order</h1>
+<h1 id="itemHeader">New Item</h1>
 <br/>
 <div class="newOrderContainer">
+
+  <select class="form-select" aria-label="Default select example">
+    <option selected>Select the type</option>
+    <option value="1">Shirt</option>
+    <option value="2">Jacket</option>
+    <option value="3">Pants</option>
+    <option value="3">Dress</option>
+    <option value="3">Skirt</option>
+  </select>
 
   <select class="form-select" aria-label="Default select example">
     <option selected>Select color category</option>
