--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,6 @@
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
   <div class='container-fluid'>
-    <a class='navbar-brand' href='#'>Navbar</a>
+    <a class='navbar-brand'>Hamper</a>
     <button
       class='navbar-toggler'
       type='button'
@@ -15,7 +15,7 @@
     <div class='collapse navbar-collapse' id='navbarSupportedContent'>
       <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
         <li class='nav-item'>
-          <a class='nav-link active' aria-current='page' href='#'>Home</a>
+          <a class='nav-link active' aria-current='page' href='/homepage' id='homeBtn'>Home</a>
         </li>
         <div id='dropdowns'>
           <li class='nav-item dropdown'>
@@ -33,23 +33,6 @@
               <li><a class='dropdown-item' href='#'>Settings</a></li>
               <li><hr class='dropdown-divider' /></li>
               <li><a class='dropdown-item' href='#' id='signOut'>Sign Out</a></li>
-            </ul>
-          </li>
-          <li class='nav-item dropdown'>
-            <a
-              class='nav-link dropdown-toggle'
-              href='#'
-              id='hamperDropdown'
-              role='button'
-              data-bs-toggle='dropdown'
-              aria-expanded='false'
-            >
-              My Hamper
-            </a>
-            <ul class='dropdown-menu' aria-labelledby='navbarDropdown'>
-              <li><a class='dropdown-item' href='#'>Edit Order</a></li>
-              <li><hr class='dropdown-divider' /></li>
-              <li><a class='dropdown-item' href='#'>Check Out</a></li>
             </ul>
           </li>
         </div>
