--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -6,10 +6,13 @@
   <select class="form-select" aria-label="Default select example">
     <option selected>Select the type</option>
     <option value="1">Shirt</option>
-    <option value="2">Jacket</option>
-    <option value="3">Pants</option>
-    <option value="3">Dress</option>
-    <option value="3">Skirt</option>
+    <option value="2">Pants</option>
+    <option value="3">Blouse</option>
+    <option value="4">Skirt</option>
+    <option value="5">Blazer</option>
+    <option value="6">Coat</option>
+    <option value="7">Sweater</option>
+    <option value="8">Dress</option>
   </select>
 
   <select class="form-select" aria-label="Default select example">
