--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,5 +30,6 @@
     integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4='
     crossorigin='anonymous'
   ></script>
-  <script src='js/index.js'></script>
+  <script src='js/navigation.js'></script>
+  <script src='js/item.js'></script>
 </html>
