--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,9 +92,19 @@
   font-size: 75px;
 }
 
-#logo {
+.card-img-top {
   width: 100%;
-  height: auto;
+  object-fit: cover;
+}
+
+#newItem:hover {
+  opacity: 0.7;
+  background-color: #d4eff3;
+}
+
+#myHamper:hover {
+  opacity: 0.7;
+  background-color: #d4eff3;
 }
 
 /* Login Page */
@@ -154,4 +164,11 @@
 
 #itemHeader {
   text-align: center;
+}
+
+.btnContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 4%;
 }
