--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,11 @@
 {{>nav}}
 <div class="container">
-    <div class="card" style="width: 18rem;">
-        <img src="/public/images/hanger-temp.png" class="card-img-top" alt="new item">
-        <div class="card-body">
-            <h5 id="newOrder" class="card-title">New Item</h5>
-        </div>
+    <div id="newItem" class="card" style="width: 12rem;">
+        <img src="./img/hanger-temp.png" class="card-img-top" alt="new item">
     </div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="/public/images/hamper-temp.png" id="logo" class="card-img-top" alt="my hamper">
-        <div class="card-body">
-            <h5 class="card-title">My Hamper</h5>
-        </div>
+    <div id="myHamper" class="card" style="width: 12rem;">
+        <img src="./img/hamper-temp.png" id="logo" class="card-img-top" alt="my hamper">
     </div>
 </div>
 
