--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,9 +12,9 @@
   <form id="login-form">
     <p class='formHeader'>Login</p>
     <div class='field'>
-      <label for="username-input-login" class='label'>Email</label>
+      <label for="email-input-login" class='label'>Email</label>
       <p class='control has-icons-left has-icons-right'>
-        <input class='input' type='email' placeholder='Email' id="username-input-login" />
+        <input class='input' type='email' placeholder='Email' id="email-input-login"/>
         <span class='icon is-small is-left'>
           <i class='fas fa-envelope'></i>
         </span>
@@ -23,12 +23,12 @@
     <div class='field'>
       <label for="password-input-login" class='label' class="form-label">Password</label>
       <p class='control has-icons-left'>
-        <input class='input' type='password' placeholder='Password' id="password-input-login" />
+        <input class='input' type='password' placeholder='Password' id="password-input-login"/>
         <span class='icon is-small is-left'>
           <i class='fas fa-lock'></i>
         </span>
       </p>
-    </div>
+    </div> 
     <div class='field'>
       <p class='control'>
         <button class="button is-success" type="submit" id="login-btn" class="btn">
@@ -41,16 +41,16 @@
 
   <p class='or'>OR</p>
 
-
+ 
   {{!-- SIGN UP HANDLER --}}
   
   <form id="signup-form">
     <div id="signup">
     <p class='formHeader'>Create Account</p>
     <div class='field'>
-      <label class='label'>Name</label>
+      <label for="nameInputSignup" class='label' >Name</label>
       <div class='control has-icons-left has-icons-right'>
-        <input class='input' type='text' placeholder='Name' />
+        <input class='input' type='text' placeholder='Name' id="nameInputSignup"/>
         <span class='icon is-small is-left'>
           <i class='fas fa-user'></i>
         </span>
@@ -58,23 +58,23 @@
     </div>
 
     <div class='field'>
-      <label class='label' for="username-input-signup">Email</label>
-      <div class='control has-icons-left has-icons-right'>
-        <input class='input' type='email' placeholder='Email' id="username-input-signup"/>
+      <label for="emailInputSignup" class='label' >Email</label>
+      <div class='control has-icons-left has-icons-right'> 
+        <input class='input' type='email' placeholder='Email' id="emailInputSignup"/>
         <span class='icon is-small is-left'>
           <i class='fas fa-envelope'></i>
         </span>
-      </div>
+      </div> 
     </div>
-
+ 
     <div class='field'>
-      <label class='label' for="password-input-signup">Password</label>
+      <label for="passwordInputSignup" class='label' >Password</label>
       <p class='control has-icons-left'>
-        <input class='input' type='password' placeholder='Password' id="password-input-signup" />
+        <input class='input' type='password' placeholder='Password' id="passwordInputSignup"/>
         <span class='icon is-small is-left'>
           <i class='fas fa-lock'></i>
         </span>
-      </p>
+      </p>      
     </div>
     <div class='field'>
       <p class='control'>
@@ -87,12 +87,12 @@
   </form>
   
 </div>
-
-<script src="/js/login.js"></script>
-<script src="/js/signup.js"></script>
-
 <footer class='loginPageFooter'>
   <div>
 
   </div>
 </footer>
+
+<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
+
