--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -16,7 +16,7 @@
   </select>
 
   <select id="color" class="form-select" aria-label="Default select example">
-    <option selected>Select color category</option>
+    <option selected>Select tone</option>
     <option value="dark">Dark</option>
     <option value="light">Light</option>
     <option value="white">White</option>
@@ -31,7 +31,7 @@
 
   <div class="input-group flex-nowrap">
     <span class="input-group-text" id="addon-wrapping"></span>
-    <input type="text" class="form-control" placeholder="Enter brand name" aria-label="Brand-name" aria-describedby="addon-wrapping">
+    <input id="brand" type="text" class="form-control" placeholder="Enter brand name" aria-label="Brand-name" aria-describedby="addon-wrapping" value="">
   </div>
 
 </div>
