--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,8 @@
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
   <div class='container-fluid'>
-    <a class='navbar-brand'>Hamper</a>
+    <a class='navbar-brand'>
+      <img src='./img/logo-plain.png' width='40' height='24' />
+    </a>
     <button
       class='navbar-toggler'
       type='button'
@@ -30,7 +32,7 @@
               My Account
             </a>
             <ul class='dropdown-menu' aria-labelledby='navbarDropdown'>
-              <li><a class='dropdown-item' href='#'>Settings</a></li>
+              <li><a id='settings' class='dropdown-item' href='#'>Settings</a></li>
               <li><hr class='dropdown-divider' /></li>
               <li><a class='dropdown-item' href='#' id='signOut'>Sign Out</a></li>
             </ul>
