added more options to settings page

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -10,13 +10,38 @@
     <h5>Email Preferences</h5>
     <div class="control">
         <label class="radio">
-            <input type="radio" name="answer">
+            <input type="radio" name="answer" id="options">
             Receive all emails, including special offers and discounts.
         </label>
         <label class="radio">
-            <input type="radio" name="answer">
+            <input type="radio" name="answer" id="options">
             Only recieve emails related to my orders.
         </label>
     </div>
-    
+    <br>
+    <h5>Default setting for how you want to acquire your clothes.</h5>
+    <div class="control">
+        <label class="radio">
+            <input type="radio" name="answer2" id="options">
+            Delivery
+        </label>
+        <label class="radio">
+            <input type="radio" name="answer2" id="options">
+            Pickup
+        </label>
+    </div>
+    <br>
+    <h5>Would you like your clean clothes covered in plastic upon pickup/delivery?</h5>
+    <div class="control">
+        <label class="radio">
+            <input type="radio" name="answer3" id="options">
+            Yes
+        </label>
+        <label class="radio">
+            <input type="radio" name="answer3" id="options">
+            No
+        </label>
+    </div>
+
+
 </div>
