--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,4 +32,5 @@
   ></script>
   <script src='js/navigation.js'></script>
   <script src='js/item.js'></script>
+  <script src='js/add-item.js'></script>
 </html>
