--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,98 +1,91 @@
 <header class='loginPageHeader'>
-  <div>
-
-  </div>
+  <img id='hamperLogo' src='./img/logo-text.png' alt='hamper logo' />
 </header>
 
-
-  {{!-- LOG IN HANDLER --}}
+{{! LOG IN HANDLER }}
 
 <div class='formContainer'>
-  <div id="login">
-  <form id="login-form">
-    <p class='formHeader'>Login</p>
-    <div class='field'>
-      <label for="email-input-login" class='label'>Email</label>
-      <p class='control has-icons-left has-icons-right'>
-        <input class='input' type='email' placeholder='Email' id="email-input-login"/>
-        <span class='icon is-small is-left'>
-          <i class='fas fa-envelope'></i>
-        </span>
-      </p>
-    </div>
-    <div class='field'>
-      <label for="password-input-login" class='label' class="form-label">Password</label>
-      <p class='control has-icons-left'>
-        <input class='input' type='password' placeholder='Password' id="password-input-login"/>
-        <span class='icon is-small is-left'>
-          <i class='fas fa-lock'></i>
-        </span>
-      </p>
-    </div> 
-    <div class='field'>
-      <p class='control'>
-        <button class="button is-success" type="submit" id="login-btn" class="btn">
-          Login
-        </button>
-      </p>
-    </div>
-  </form>
+  <div id='login'>
+    <form id='login-form'>
+      <p class='formHeader'>Login</p>
+      <div class='field'>
+        <label for='email-input-login' class='label'>Email</label>
+        <p class='control has-icons-left has-icons-right'>
+          <input class='input' type='email' placeholder='Email' id='email-input-login' />
+          <span class='icon is-small is-left'>
+            <i class='fas fa-envelope'></i>
+          </span>
+        </p>
+      </div>
+      <div class='field'>
+        <label for='password-input-login' class='label' class='form-label'>Password</label>
+        <p class='control has-icons-left'>
+          <input class='input' type='password' placeholder='Password' id='password-input-login' />
+          <span class='icon is-small is-left'>
+            <i class='fas fa-lock'></i>
+          </span>
+        </p>
+      </div>
+      <div class='field'>
+        <p class='control'>
+          <button class='button is-success' type='submit' id='login-btn' class='btn'>
+            Login
+          </button>
+        </p>
+      </div>
+    </form>
   </div>
 
   <p class='or'>OR</p>
 
- 
-  {{!-- SIGN UP HANDLER --}}
-  
-  <form id="signup-form">
-    <div id="signup">
-    <p class='formHeader'>Create Account</p>
-    <div class='field'>
-      <label for="nameInputSignup" class='label' >Name</label>
-      <div class='control has-icons-left has-icons-right'>
-        <input class='input' type='text' placeholder='Name' id="nameInputSignup"/>
-        <span class='icon is-small is-left'>
-          <i class='fas fa-user'></i>
-        </span>
+  {{! SIGN UP HANDLER }}
+
+  <form id='signup-form'>
+    <div id='signup'>
+      <p class='formHeader'>Create Account</p>
+      <div class='field'>
+        <label for='nameInputSignup' class='label'>Name</label>
+        <div class='control has-icons-left has-icons-right'>
+          <input class='input' type='text' placeholder='Name' id='nameInputSignup' />
+          <span class='icon is-small is-left'>
+            <i class='fas fa-user'></i>
+          </span>
+        </div>
+      </div>
+
+      <div class='field'>
+        <label for='emailInputSignup' class='label'>Email</label>
+        <div class='control has-icons-left has-icons-right'>
+          <input class='input' type='email' placeholder='Email' id='emailInputSignup' />
+          <span class='icon is-small is-left'>
+            <i class='fas fa-envelope'></i>
+          </span>
+        </div>
+      </div>
+
+      <div class='field'>
+        <label for='passwordInputSignup' class='label'>Password</label>
+        <p class='control has-icons-left'>
+          <input class='input' type='password' placeholder='Password' id='passwordInputSignup' />
+          <span class='icon is-small is-left'>
+            <i class='fas fa-lock'></i>
+          </span>
+        </p>
+      </div>
+      <div class='field'>
+        <p class='control'>
+          <button class='button is-success' type='submit' id='signup-btn' class='btn'>
+            Create Account
+          </button>
+        </p>
       </div>
     </div>
-
-    <div class='field'>
-      <label for="emailInputSignup" class='label' >Email</label>
-      <div class='control has-icons-left has-icons-right'> 
-        <input class='input' type='email' placeholder='Email' id="emailInputSignup"/>
-        <span class='icon is-small is-left'>
-          <i class='fas fa-envelope'></i>
-        </span>
-      </div> 
-    </div>
- 
-    <div class='field'>
-      <label for="passwordInputSignup" class='label' >Password</label>
-      <p class='control has-icons-left'>
-        <input class='input' type='password' placeholder='Password' id="passwordInputSignup"/>
-        <span class='icon is-small is-left'>
-          <i class='fas fa-lock'></i>
-        </span>
-      </p>      
-    </div>
-    <div class='field'>
-      <p class='control'>
-        <button class= "button is-success" type="submit" id="signup-btn" class="btn">
-          Create Account
-        </button>
-      </p>
-    </div>
-    </div>
   </form>
-  
+
 </div>
 <footer class='loginPageFooter'>
-  <div>
-
-  </div>
+  <img id='teamLogo' src='./img/team-logo.png' alt='team logo' />
 </footer>
 
-<script src="/js/login.js"></script>
-<script src="/js/signup.js"></script>
-
+<script src='/js/login.js'></script>
+<script src='/js/signup.js'></script>
