--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,7 +1,7 @@
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
   <div class='container-fluid'>
     <a class='navbar-brand'>
-      <img src='./img/logo-plain.png' width='40' height='24' />
+      <img id='navLogo' src='./img/logo-plain.png' />
     </a>
     <button
       class='navbar-toggler'
@@ -40,5 +40,6 @@
         </div>
       </ul>
     </div>
+    <img id='navTeamLogo' src='./img/team-logo.png' alt='team logo' />
   </div>
 </nav>
