add item button now works, still needs to send data to backend though

--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -37,9 +37,13 @@
     <option id="is_cotton" value="cotton">Cotton</option>
   </select>
 
-  <div class="input-group flex-nowrap">
+  {{!-- <div class="input-group flex-nowrap">
     <span class="input-group-text" id="addon-wrapping"></span>
     <input id="item_brand" type="text" class="form-control" placeholder="Enter brand name" aria-label="Brand-name" aria-describedby="addon-wrapping" value="">
+  </div> --}}
+
+  <div class="input-group flex-nowrap">
+    <input type="text" class="form-control" placeholder="Enter brand name" id="item_brand" aria-describedby="emailHelp">
   </div>
 
 </div>
