--- a/views/partials/card.handlebars
+++ b/views/partials/card.handlebars
@@ -1,10 +1,11 @@
-<div class="card" style="width: 18rem;">
-  <img src="{{item_type.value}}-ph.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">{{item_size.value}}</li>
-    <li class="list-group-item">{{item_tone.value}}</li>
-    <li class="list-group-item">{{item_material.value}}</li>
-    <li class="list-group-item">{{item_brand}}</li>
-  </ul>
+<div class='card' style='width: 18rem;'>
+  <img src='./img/{{type}}-ph.jpg' class='card-img-top' alt='...' />
+  <div class='card-body'>
+    <ul class='list-group list-group-flush'>
+      <li class='list-group-item'>{{size}}</li>
+      <li class='list-group-item'>{{tone}}</li>
+      <li class='list-group-item'>{{material}}</li>
+      <li class='list-group-item'>{{brand}}</li>
+    </ul>
+  </div>
 </div>
