--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -1,4 +1,6 @@
 {{>nav}}
+  
+
 <h1 id="itemHeader">New Item</h1>
 <br/>
 <div class="newOrderContainer">
@@ -51,3 +53,22 @@
 <div class="btnContainer">
   <button id="addBtn" type="button" class="btn btn-info">Add Item</button>
 </div>
+
+ <div class="btnContainer"><button 
+      id="upload_widget" 
+      class="cloudinary-button">
+        Upload Image
+</button>
+</div> 
+
+<!-- cloudinary upload widget -->
+    <script 
+     src="https://widget.cloudinary.com/v2.0/global/all.js" 
+     type="text/javascript">
+    </script>
+
+    <!-- local upload instantiation -->
+    <script 
+     src="js/upload_widget.js" 
+     type="text/javascript">
+    </script>
