Implementing the last features

--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -54,12 +54,12 @@
   <button id="addBtn" type="button" class="btn btn-info">Add Item</button>
 </div>
 
- <div class="btnContainer"><button 
+ {{!-- <div class="btnContainer"><button 
       id="upload_widget" 
       class="cloudinary-button">
         Upload Image
 </button>
-</div> 
+</div>  --}}
 
 <!-- cloudinary upload widget -->
     <script 
