--- a/views/myhamper.handlebars
+++ b/views/myhamper.handlebars
@@ -16,7 +16,7 @@
         Upload Image
 </button>
 </div> 
-<div class='card' style='width: 18rem;'>
+{{!-- <div class='card' style='width: 18rem;'>
   <img src='/hamper/public/img/shirt-ph.jpg' id= 'uploadedimage' class='card-img-top' alt='...' />
   <div class='card-body'>
     <ul class='list-group list-group-flush'>
@@ -26,13 +26,13 @@
       <li class='list-group-item'>Brand: Hanes</li>
     </ul>
   </div>
-</div>
- <div class="btnContainer2"><button 
+</div> --}}
+ {{!-- <div class="btnContainer2"><button 
       id="upload_widget" 
       class="cloudinary-button">
         Upload Image
 </button>
-</div> 
+</div>  --}}
 
 
  <script 
